cmake_minimum_required(VERSION 3.12)
project(isOdev C)
set(SRC_FOLDER "src")
set(INCLUDE_FOLDER "include")
set(CMAKE_C_STANDARD 99)
include_directories(${INCLUDE_FOLDER})
#file(GLOB SOURCE_FILES "src/util.c")
set(SOURCE_FILES "${SRC_FOLDER}/util.c" "${SRC_FOLDER}/main.c")
add_executable(isOdev ${SOURCE_FILES})